Added functionality: add to cart, delete from cart, view cart, view cruise, pay and localization for all this classes

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -110,10 +110,14 @@
 }
 
 .header-form {
-    display: inline-block;
-    float: right;
-    background-color: powderblue;
+    position: fixed;
+    left: 0;
+    top: 0;
     width: 100%;
+
+    display: inline-block;
+    /*float: right;*/
+    background-color: powderblue;
 }
 
 .header-button-div {
